PokemonView - loadData tested - display function added + index.js

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <body>
         <h1>Pokemon App</h1>
-        
-        <script></script>
+        <div id="pokedex"></div>
+        <script type="text/javascript" src="bundle.js"></script>
     </body>
 
 </html>
